12-December-2022 Petasis Georgios <petasis@iit.demokritos.gr>:
 * clarin-angular/package.json: Updated version to 3.3.2. (Export Annotations
 in Document Inspection).

 * clarin-angular/src/app/models/span.ts: Added SpanType enum.

 * clarin-angular/src/app/components/controls/text-widget-isolated/text-widget-isolated.component.html:
 Updated component to match text-widget.

 * clarin-angular/src/app/components/controls/annotation-set-inspector/annotation-set-inspector.component.html:
 * clarin-angular/src/app/components/controls/annotation-set-inspector/annotation-set-inspector.component.ts:
 Export Annotations in Excel/CSV/JSON/TXT added, sorting of table columns.

 * clarin-angular/src/app/helpers/annotation.ts: Added helper function
 annotationSortingDataAccessor(), for sorting tables with Annotations.

 * clarin-angular/src/app/app.module.ts:
 * clarin-angular/package.json: Added FontAwesome 0.10.2, and updated codemirror to
 5.65.10.

04-December-2022 Petasis Georgios <petasis@iit.demokritos.gr>:
 * backend-django/DjangoClarin/settings.py:
 * backend-django/vast_auth2/views.py:
 * backend-django/vast_auth2/adapter.py: An adapter for Django Allauth, to
 link VAST logins with existing accounts.

16-November-2022 Petasis Georgios <petasis@iit.demokritos.gr>:
 * clarin-angular/src/app/components/dialogs/share-collection-modal/share-collection-modal.component.html:
 * clarin-angular/src/app/components/views/shared-collections/shared-collections.component.html:
 * clarin-angular/src/app/components/views/shared-collections/shared-collections.component.ts:
 * clarin-angular/src/app/models/collection.ts:
 * clarin-angular/src/app/services/shared-collection/shared-collection.service.ts:
 * clarin-angular/src/app/services/shared-collections-service/shared-collections-service.service.ts:
 * clarin-angular/src/assets/i18n/el-GR.json:
 * clarin-angular/src/assets/i18n/en-US.json:
 * clarin-angular/src/css/clarin-material.scss: Added actions in Shared Collection