@@ -1,5 +1,5 @@
 PROJECT_NAME=ellogon-web-annotation-tool
-PROJECT_VERSION=v0.1.2
+PROJECT_VERSION=v0.1.3
 DOCKER_HUB_NAME=docker.io/petasis/${PROJECT_NAME}
 
 MARIADB_IMAGE=mariadb
@@ -8,8 +8,9 @@ MARIADB_VERSION=latest
 MONGODB_IMAGE=mongo
 MONGODB_VERSION=latest
 
-FEDORA_VERSION=35
+FEDORA_VERSION=37
 APACHE_RIVET_TAG=3.2.1
+RL_JSON_TAG=0.11.4
 
 IMAGE_NAME=${PROJECT_NAME}
 IMAGE_VERSION=${PROJECT_VERSION}
@@ -59,3 +60,5 @@ MONGO_DB_PORT=${MONGO_PORT}
 MONGO_USERNAME=${MONGO_INITDB_USERNAME}
 MONGO_PASSWORD=${MONGO_INITDB_PASSWORD}
 MONGO_DATABASE=${MONGO_INITDB_DATABASE}
+# Media Data Lake local path...
+DJANGO_MEDIA_DATA_LAKE_BASE_DIR="/var/www/html/ellogon_annotation_tool"
